--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
   
   <style type="text/css">
 table,tr,td {border:solid 2px;}
-   
+
   </style> 
   
  </head>
  <body>
-<h1><i> Енергозберігаючі технології</i></h1>
+<h1><i> <a href="https://uk.wikipedia.org/wiki/%D0%95%D0%BD%D0%B5%D1%80%D0%B3%D0%BE%D0%B7%D0%B1%D0%B5%D1%80%D0%B5%D0%B6%D0%B5%D0%BD%D0%BD%D1%8F">Енергозберігаючі технології</a></i></h1>
 <div class="block1">
-<p class="paragraph1">Що таке "енергозберігаючі технології"?<hr></p>
+<p class="paragraph1"><b><i>Що таке "енергозберігаючі технології"?</b></i><hr></p>
 <p>Енергозбереження- стосується зменшення споживання енергії за рахунок використання меншої кількості енергетичних послуг. Енергозбереження відрізняється від енергоефективності, яке стосується використання меншої кількості енергії в тій самій послузі</p><br><hr>
 <p>Наприклад, менше користуватись авто — енергозбереження, а пересісти на авто з меншою витратою палива — енергоефективність. Але і енергозбереження, і енергоефективність є техніками зменшення використання енергії <hr></p>
 </div>
@@ -43,12 +43,14 @@ table,tr,td {border:solid 2px;}
  
 <li>Вчасно вимкнене світло і використання енергозберігаючих ламп у світовому масштабі заощадить 2 терраватти електроенергії та 1,5 млрд барелів нафти на рік. </li>
  
-<li> Адже освітлення - це тільки 19% споживаної на планеті електроенергії. </li></ul></pre><p>
+<li> Адже освітлення - це тільки 19% споживаної на планеті електроенергії. </li></ul></pre>
+
 <p>Отже, щоб досягти відчутного підвищення енергоефективності, потрібно економити не тільки електрику, але й інші джерела енергії..</p> </div>
   <div class="block2">
   <h2>Найенергоефективніший будинок у світі</h2>
-  <img src="https://image.jimcdn.com/app/cms/image/transf/dimension=227x1024:format=jpg/path/s043464d80167c98e/image/ie5652ad6ffb0632f/version/1434987262/image.jpg" alt="111">
-Одним з найбільш енергоефективних будинків в світі визнано будівлю Дослідницького Центру ROCKWOOL. Він є відмінним прикладом комплексного підходу до енергоефективного будівництва. Застосування нових інженерних рішень дозволило повністю виключити можливість виникнення «містків холоду». Тришарові вікна особливої конструкції з низькою теплопровідністю створюють ефект достатку денного світла і простору, що дозволяє збільшити енергозбереження в освітленні приміщень, а природна вентиляція, яка оптимізується за допомогою комп'ютерної системи, дозволяє ще більше зменшити втрати тепла.
+  <p><i>клікни на картинку</i></p>
+  <a href="http://www.rockwool.ua"><img src="https://image.jimcdn.com/app/cms/image/transf/dimension=227x1024:format=jpg/path/s043464d80167c98e/image/ie5652ad6ffb0632f/version/1434987262/image.jpg" alt="bildingng" width="30%"><a>
+<p>Одним з найбільш енергоефективних будинків в світі визнано будівлю Дослідницького Центру ROCKWOOL. Він є відмінним прикладом комплексного підходу до енергоефективного будівництва. Застосування нових інженерних рішень дозволило повністю виключити можливість виникнення «містків холоду». Тришарові вікна особливої конструкції з низькою теплопровідністю створюють ефект достатку денного світла і простору, що дозволяє збільшити енергозбереження в освітленні приміщень, а природна вентиляція, яка оптимізується за допомогою комп'ютерної системи, дозволяє ще більше зменшити втрати тепла.
 </p></div> 
 
 <form>
@@ -109,5 +111,13 @@ table,tr,td {border:solid 2px;}
    </select></p>
   </form>
  <p>ПРИЗМЕНШЕННІШИОИНИ<wbr>ЕКРАНУЗАСТОСОВУЮЧИФУНКЦІЮWBR<wbr>ТЕКСТПЕРЕНЕСЕТЬСЯПІСЛЯWBRТА<wbr>ПІСЛЯСЛОВАШИРИНИ</P>
+ <div>
+ <h1>Одним з джерел економії енергії є СОНЦЕ</h1>
+ <p>  <a href="https://uk.wikipedia.org/wiki/%D0%A1%D0%B0%D0%BC%D0%B1%D1%96%D1%80%D1%81%D1%8C%D0%BA%D0%B0_%D1%81%D0%BE%D0%BD%D1%8F%D1%87%D0%BD%D0%B0_%D0%B5%D0%BB%D0%B5%D0%BA%D1%82%D1%80%D0%BE%D1%81%D1%82%D0%B0%D0%BD%D1%86%D1%96%D1%8F">Самбірська сонячна електростанція</a></p>
+ <p>Самбірська — фотоелектрична сонячна електростанція. Розташована у селі Ралівка, Львівської області.
+У 2012 році відкрито першу чергу сонячної станції потужністю 1,1 МВт. У травні 2013 року відкрито другу чергу потужністю 2,08 МВт. Загальну потужність станції було заплановано довести до 9,98 МВт у 2013 році.
+ </p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/-K0ZU9skTD4?ecver=1" frameborder="0" allowfullscreen></iframe>
+ </div>
  </body>
 </html>
