--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@ table,tr,td {border:solid 2px;}
  <body>
 <h1><i> <a href="https://uk.wikipedia.org/wiki/%D0%95%D0%BD%D0%B5%D1%80%D0%B3%D0%BE%D0%B7%D0%B1%D0%B5%D1%80%D0%B5%D0%B6%D0%B5%D0%BD%D0%BD%D1%8F">Енергозберігаючі технології</a></i></h1>
 <div class="block1">
-<p class="paragraph1"><b><i>Що таке "енергозберігаючі технології"?</b></i><hr></p>
+<p class="paragraph1"><b><i>Що таке "енергозберігаючі технології"?</i></b></p><hr>
 <p>Енергозбереження- стосується зменшення споживання енергії за рахунок використання меншої кількості енергетичних послуг. Енергозбереження відрізняється від енергоефективності, яке стосується використання меншої кількості енергії в тій самій послузі</p><br><hr>
-<p>Наприклад, менше користуватись авто — енергозбереження, а пересісти на авто з меншою витратою палива — енергоефективність. Але і енергозбереження, і енергоефективність є техніками зменшення використання енергії <hr></p>
+<p>Наприклад, менше користуватись авто — енергозбереження, а пересісти на авто з меншою витратою палива — енергоефективність. Але і енергозбереження, і енергоефективність є техніками зменшення використання енергії </p><hr>
 </div>
 
   <div class="block2">
   <h2>Цікаво!</h2>
  <p>
- <pre>
+
   <ul>
 <li>Для того, щоб 12 годин щодня протягом року горіла одна лампа потужністю 100 Вт, необхідно спалити 180 кг вугілля, внаслідок чого в атмосферу буде викинуто 425 кг СО<sub>2</sub>. </li>
  
@@ -43,13 +43,14 @@ table,tr,td {border:solid 2px;}
  
 <li>Вчасно вимкнене світло і використання енергозберігаючих ламп у світовому масштабі заощадить 2 терраватти електроенергії та 1,5 млрд барелів нафти на рік. </li>
  
-<li> Адже освітлення - це тільки 19% споживаної на планеті електроенергії. </li></ul></pre>
+<li> Адже освітлення - це тільки 19% споживаної на планеті електроенергії. </li></ul>
 
 <p>Отже, щоб досягти відчутного підвищення енергоефективності, потрібно економити не тільки електрику, але й інші джерела енергії..</p> </div>
   <div class="block2">
   <h2>Найенергоефективніший будинок у світі</h2>
   <p><i>клікни на картинку</i></p>
-  <a href="http://www.rockwool.ua"><img src="https://image.jimcdn.com/app/cms/image/transf/dimension=227x1024:format=jpg/path/s043464d80167c98e/image/ie5652ad6ffb0632f/version/1434987262/image.jpg" alt="bildingng" width="30%"><a>
+  <a href="http://www.rockwool.ua">
+  <img src="https://image.jimcdn.com/app/cms/image/transf/dimension=227x1024:format=jpg/path/s043464d80167c98e/image/ie5652ad6ffb0632f/version/1434987262/image.jpg" alt="bildingng" ></a>
 <p>Одним з найбільш енергоефективних будинків в світі визнано будівлю Дослідницького Центру ROCKWOOL. Він є відмінним прикладом комплексного підходу до енергоефективного будівництва. Застосування нових інженерних рішень дозволило повністю виключити можливість виникнення «містків холоду». Тришарові вікна особливої конструкції з низькою теплопровідністю створюють ефект достатку денного світла і простору, що дозволяє збільшити енергозбереження в освітленні приміщень, а природна вентиляція, яка оптимізується за допомогою комп'ютерної системи, дозволяє ще більше зменшити втрати тепла.
 </p></div> 
 
