--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ table,tr,td {border:solid 2px;}
   <input type="radio" name="answer" value="a3">Україна</p>
   <p><input type="submit"></p>
  </form>
- <table cellpadding="2px">
+ <table>
  <caption> Таблиця</caption>
  <tr>
  <td>71 % </td><td>залишають електроприлади в режимі «стенд-бай»</td>
@@ -94,18 +94,18 @@ table,tr,td {border:solid 2px;}
 <td> сильніше вмикають опалення замість того, щоб одягти светр.</td> 
  </tr>
  </table>
-   <form width=50px height=10px>
+   <form>
    <p><select size="10" name="systems">
     <option disabled>Системи енергозбереження</option>
     <option value="t1" selected>Енергія вітру</option>
     <option value="t2">Енергія сонці</option>
     <option value="t3">Енергія землі</option>
     <option value="t4">Біогаз</option>
-	  <option value="t5" selected>Енергія вітру</option>
+	  <option value="t5">Енергія вітру</option>
     <option value="t6">Енергія сонці</option>
     <option value="t7">Енергія землі</option>
     <option value="t8">Біогаз</option>
-	  <option value="t9" selected>Енергія вітру</option>
+	  <option value="t9" >Енергія вітру</option>
     <option value="t10">Енергія сонці</option>
     <option value="t11">Енергія землі</option>
     <option value="t12">Біогаз</option>
@@ -118,7 +118,7 @@ table,tr,td {border:solid 2px;}
  <p>Самбірська — фотоелектрична сонячна електростанція. Розташована у селі Ралівка, Львівської області.
 У 2012 році відкрито першу чергу сонячної станції потужністю 1,1 МВт. У травні 2013 року відкрито другу чергу потужністю 2,08 МВт. Загальну потужність станції було заплановано довести до 9,98 МВт у 2013 році.
  </p>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/-K0ZU9skTD4?ecver=1" frameborder="0" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/-K0ZU9skTD4?ecver=1"  allowfullscreen></iframe>
  </div>
  </body>
 </html>
