--- a/index.html
+++ b/index.html
@@ -2,123 +2,12 @@
 <html>
  <head>
   <meta charset="utf-8">
-  <title>Енергозбереження</title>
-  
-  <style type="text/css">
-table,tr,td {border:solid 2px;}
-
-  </style> 
-  
+  <title>discriminant</title>
  </head>
  <body>
-<h1><i> <a href="https://uk.wikipedia.org/wiki/%D0%95%D0%BD%D0%B5%D1%80%D0%B3%D0%BE%D0%B7%D0%B1%D0%B5%D1%80%D0%B5%D0%B6%D0%B5%D0%BD%D0%BD%D1%8F">Енергозберігаючі технології</a></i></h1>
-<div class="block1">
-<p class="paragraph1"><b><i>Що таке "енергозберігаючі технології"?</i></b></p><hr>
-<p>Енергозбереження- стосується зменшення споживання енергії за рахунок використання меншої кількості енергетичних послуг. Енергозбереження відрізняється від енергоефективності, яке стосується використання меншої кількості енергії в тій самій послузі</p><br><hr>
-<p>Наприклад, менше користуватись авто — енергозбереження, а пересісти на авто з меншою витратою палива — енергоефективність. Але і енергозбереження, і енергоефективність є техніками зменшення використання енергії </p><hr>
-</div>
+ 
+  <script src="js/index.js" type="text/javascript">
 
-  <div class="block2">
-  <h2>Цікаво!</h2>
- <p>
-
-  <ul>
-<li>Для того, щоб 12 годин щодня протягом року горіла одна лампа потужністю 100 Вт, необхідно спалити 180 кг вугілля, внаслідок чого в атмосферу буде викинуто 425 кг СО<sub>2</sub>. </li>
- 
-<li>Закриваючи на ніч штори, можна зменшити втрати тепла через вікна. </li>
- 
-<li>Зниження рівня споживання гарячої води на 50 літрів за добу веде до щорічної економії 100 літрів мазуту. </li>
- 
-<li> Якісна теплоізоляція в будівництві — це запорука економії енергоресурсів та збереження нормального мікроклімату у приміщеннях. </li>
- 
-<li> Втрати енергії через холодні стіни становлять 40-70% від загальної потреби в теплі. </li>
- 
-<li> Економити електроенергію можна за рахунок кольору стін. </li>
- 
-<li>Біла стіна відбиває 80% спрямованого на неї світла, темно-зелена — лише 15%, чорна — лише 9%. </li>
- 
-<li>Кран, що протікає, призводить до витрат 7000 літрів води на рік (за умови, що вона крапає повільно). </li>
- 
-<li> Якщо ж вода біжить тоненькою цівкою, то її втрати становитимуть до 30 000 літрів, на рік </li>
- 
-<li>Вчасно вимкнене світло і використання енергозберігаючих ламп у світовому масштабі заощадить 2 терраватти електроенергії та 1,5 млрд барелів нафти на рік. </li>
- 
-<li> Адже освітлення - це тільки 19% споживаної на планеті електроенергії. </li></ul>
-
-<p>Отже, щоб досягти відчутного підвищення енергоефективності, потрібно економити не тільки електрику, але й інші джерела енергії..</p> </div>
-  <div class="block2">
-  <h2>Найенергоефективніший будинок у світі</h2>
-  <p><i>клікни на картинку</i></p>
-  <a href="http://www.rockwool.ua">
-  <img src="https://image.jimcdn.com/app/cms/image/transf/dimension=227x1024:format=jpg/path/s043464d80167c98e/image/ie5652ad6ffb0632f/version/1434987262/image.jpg" alt="bildingng" ></a>
-<p>Одним з найбільш енергоефективних будинків в світі визнано будівлю Дослідницького Центру ROCKWOOL. Він є відмінним прикладом комплексного підходу до енергоефективного будівництва. Застосування нових інженерних рішень дозволило повністю виключити можливість виникнення «містків холоду». Тришарові вікна особливої конструкції з низькою теплопровідністю створюють ефект достатку денного світла і простору, що дозволяє збільшити енергозбереження в освітленні приміщень, а природна вентиляція, яка оптимізується за допомогою комп'ютерної системи, дозволяє ще більше зменшити втрати тепла.
-</p></div> 
-
-<form>
-  <p><b> В якій країні найвищий рівень енергозбереження?</b></p>
-  <p><input type="radio" name="answer" value="a1">Англія<Br>
-  <input type="radio" name="answer" value="a2">Америка<Br>
-  <input type="radio" name="answer" value="a3">Україна</p>
-  <p><input type="submit"></p>
- </form>
- <table>
- <caption> Таблиця</caption>
- <tr>
- <td>71 % </td><td>залишають електроприлади в режимі «стенд-бай»</td>
- </tr>
- <tr>
- <td>67 % </td>
- <td>гріють у чайнику більше води, ніж потрібно</td> </tr>
- <tr>
-<td> 65 %</td>
-<td>залишають невикористовувані зарядні пристрої у розетці,</td> </tr>
-<tr>
-<td>63 % </td>
-<td>залишають світло у порожніх кімнатах,</td> </tr>
-<tr>
-<td>48 % </td>
-<td>їздять на авто навіть у короткі поїздки,</td> </tr>
-<tr>
-<td>44 %</td> 
-<td>обирають занадто гарячий режим прання,</td> </tr>
-<tr>
-<td>32 % </td>
-<td>не вимикають мотор у машині, яка зупинилася (наприклад., у заторах),</td> </tr>
-<tr><td>32 %</td> 
-<td>використовують сушку одягу замість сушки на повітрі,</td> </tr>
-<tr>
-<td>28 % </td>
-<td>опалюють пустий будинок,</td> </tr>
-<tr>
-<td>22 %</td>
-<td> сильніше вмикають опалення замість того, щоб одягти светр.</td> 
- </tr>
- </table>
-   <form>
-   <p><select size="10" name="systems">
-    <option disabled>Системи енергозбереження</option>
-    <option value="t1" selected>Енергія вітру</option>
-    <option value="t2">Енергія сонці</option>
-    <option value="t3">Енергія землі</option>
-    <option value="t4">Біогаз</option>
-	  <option value="t5">Енергія вітру</option>
-    <option value="t6">Енергія сонці</option>
-    <option value="t7">Енергія землі</option>
-    <option value="t8">Біогаз</option>
-	  <option value="t9" >Енергія вітру</option>
-    <option value="t10">Енергія сонці</option>
-    <option value="t11">Енергія землі</option>
-    <option value="t12">Біогаз</option>
-   </select></p>
-  </form>
- <p>ПРИЗМЕНШЕННІШИОИНИ<wbr>ЕКРАНУЗАСТОСОВУЮЧИФУНКЦІЮWBR<wbr>ТЕКСТПЕРЕНЕСЕТЬСЯПІСЛЯWBRТА<wbr>ПІСЛЯСЛОВАШИРИНИ</P>
- <div>
- <h1>Одним з джерел економії енергії є СОНЦЕ</h1>
- <p>  <a href="https://uk.wikipedia.org/wiki/%D0%A1%D0%B0%D0%BC%D0%B1%D1%96%D1%80%D1%81%D1%8C%D0%BA%D0%B0_%D1%81%D0%BE%D0%BD%D1%8F%D1%87%D0%BD%D0%B0_%D0%B5%D0%BB%D0%B5%D0%BA%D1%82%D1%80%D0%BE%D1%81%D1%82%D0%B0%D0%BD%D1%86%D1%96%D1%8F">Самбірська сонячна електростанція</a></p>
- <p>Самбірська — фотоелектрична сонячна електростанція. Розташована у селі Ралівка, Львівської області.
-У 2012 році відкрито першу чергу сонячної станції потужністю 1,1 МВт. У травні 2013 року відкрито другу чергу потужністю 2,08 МВт. Загальну потужність станції було заплановано довести до 9,98 МВт у 2013 році.
- </p>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/-K0ZU9skTD4?ecver=1"  allowfullscreen></iframe>
- </div>
+  </script>
  </body>
 </html>
